@@ -1,3 +1,8 @@
+2016-01-24  Dominique d'Humieres  <dominiq@lps.ens.fr>
+
+	PR fortran/68283
+	gfortran.dg/pr68283.f90: New test.
+
 2016-01-24  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/66094
